_docs/kustomize/akashd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akashd
spec:
  selector:
    matchLabels:
      app: akashd
  template:
    metadata:
      labels:
        app: akashd
    spec:
      containers:
        - name: akashd
          image: ovrclk/akashd:latest
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh" , "/boot/run.sh" ]
          ports:
            - name: akashd-rpc
              containerPort: 26657
            - name: akashd-p2p
              containerPort: 26656
          volumeMounts:
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: data
              mountPath: /boot-data
              readOnly: true
            - name: keys
              mountPath: /boot-keys
              readOnly: true
      volumes:
        - name: boot
          configMap:
            name: akashd-boot
        - name: data
          configMap:
            name: akashd-data
        - name: keys
          secret:
            secretName: akashd-keys
