_docs/kustomize/akashd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akash
spec:
  selector:
    app: akash
  ports:
    - name: akash-rpc
      port: 26657
    - name: akash-p2p
      port: 26656
