_docs/kustomize/akashd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash
spec:
  rules:
    - host: akash.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: akash
                port:
                  name: akash-rpc
